change thankyou page

--- a/modules/example/public/forms/send_email_form.liquid
+++ b/modules/example/public/forms/send_email_form.liquid
@@ -1,6 +1,8 @@
 ---
 name: send_email_form
 resource: User
+email_notifications:
+  - covid_questionnaire_link
 ---
 
 <form action="/email_send/" method="POST">
