--- a/app/views/pages/thankyou.liquid
+++ b/app/views/pages/thankyou.liquid
@@ -1,4 +1,9 @@
 ---
 method: post
 ---
-<script>window.location.href = '/thankyou_success_page';</script>
+<div class="max-w-2xl mx-auto mt-10 text-center">
+    <h2 class="text-2xl font-semibold">
+        Thank you!
+    </h2>
+
+</div>
