add send sms form

--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -5,7 +5,7 @@
       Welcome to SalonEverywhere Pre-Appointment COVID Screening Tool
     </h2>
     <div class="text-sm font-semibold mt-8">
-      <h4>Please enter your email address:</h4>
+      <h4>Please enter your email address or phone number:</h4>
       {% include_form "modules/example/send_email_form" %}
     </div>
     
