--- a/modules/example/public/forms/send_email_form.liquid
+++ b/modules/example/public/forms/send_email_form.liquid
@@ -2,10 +2,10 @@
 name: send_email_form
 resource: User
 email_notifications:
-  - covid_questionnaire_link
+  - covid_questionnaire_email
 ---
 
 <form action="/email_send/" method="POST">
   <input type="email" name="email_address" placeholder="example@email.com"/>
-  <button class="button" type="submit">Send Email</button>
+  <button class="button" type="submit">Send Link</button>
 </form>
