--- a/app/smses/covid_questionnaire_sms.liquid
+++ b/app/smses/covid_questionnaire_sms.liquid
@@ -1,5 +1,5 @@
 ---
-to: '{{ form.properties.phone_number }}'
+to: '{{ form.phone_number }}'
 ---
 <h1>Hi!</h1>
 <p>Please visit the following link to complete COVID screening questionnaire.</p>
