--- a/modules/example/public/forms/send_email_form.liquid
+++ b/modules/example/public/forms/send_email_form.liquid
@@ -7,5 +7,5 @@ email_notifications:
 
 <form action="/email_send/" method="POST">
   <input type="email" name="email_address" placeholder="example@email.com"/>
-  <button class="button" type="submit">Send Link</button>
+  <button class="button" type="submit">Send</button>
 </form>
