--- a/modules/example/public/forms/send_sms_form.liquid
+++ b/modules/example/public/forms/send_sms_form.liquid
@@ -6,6 +6,6 @@ sms_notifications:
 ---
 
 <form action="/sms_send/" method="POST">
-  <input type="tel" name="phone_number" placeholder="9999999999"/>
-  <button class="button" type="submit">Send Link</button>
+  <input type="tel" name="phone_number"/>
+  <button class="button" type="submit">Send</button>
 </form>
