--- a/modules/example/public/forms/send_sms_form.liquid
+++ b/modules/example/public/forms/send_sms_form.liquid
@@ -4,8 +4,7 @@ resource: User
 sms_notifications: 
   - covid_questionnaire_sms
 ---
-
 <form action="/sms_send/" method="POST">
-  <input type="tel" name="phone_number" placeholder="9999999999"/>
-  <button class="button" type="submit">Send Link</button>
+  <input type="tel" name="phone_number">
+  <button class="button" type="submit">Send</button>
 </form>
