--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -2,11 +2,15 @@
 
   <div class="my-10 px-10 md:px-0 w-full text-center">
     <h2 class="text-2xl font-semibold">
-      Welcome to SalonEverywhere Pre-Appointment COVID Screening Tool!
+      Welcome to SalonEverywhere Pre-Appointment COVID Screening Tool
     </h2>
-    <div class="text-sm font-semibold mt-8">
+    <div class="text-sm font-semibold mt-8" style="width: 400px; margin: auto;">
       <h4>Please enter your email address or phone number:</h4>
+      <p style="text-align-last: left;">Email:</p>
       {% include_form "modules/example/send_email_form" %}
+      <p style="text-align-last: left;">Phone:</p>
+      {% include_form "modules/example/send_sms_form" %}
+
     </div>
     
   </div>
